P2Pmsgcore/native/P2Pmsgcore_c.h

// ── Opaque handles ────────────────────────────────────────────────────────────
typedef void* P2PAddrHandle;
typedef void* P2PeerMsgHandle;
P2PC_API int            p2paddr_is_null       (P2PAddrHandle h);
P2PC_API int            p2paddr_is_empty      (P2PAddrHandle h);
P2PC_API unsigned short p2paddr_sizeof        (P2PAddrHandle h);
P2PC_API int            p2paddr_is_child      (P2PAddrHandle h, const wchar_t* strAddr);
P2PC_API int            p2paddr_is_rable      (P2PAddrHandle h, const wchar_t* strAddr);
// ── P2PeerMsg ─────────────────────────────────────────────────────────────────
P2PC_API P2PeerMsgHandle  p2peermsg_create         (void);
P2PC_API P2PeerMsgHandle  p2peermsg_create_full    (const wchar_t* src,
                                                     const wchar_t* dst,
                                                     const wchar_t* msgID,
                                                     const void*    data,
                                                     unsigned short dataSize);