P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2paddr_is_null(P2PAddrHandle h)
     * }
     */
    public static MethodHandle p2paddr_is_null$handle() {
        return p2paddr_is_null.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2paddr_is_null(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_is_null$address() {
        return p2paddr_is_null.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2paddr_is_null(P2PAddrHandle h)
     * }
     */
    public static int p2paddr_is_null(MemorySegment h) {
        var mh$ = p2paddr_is_null.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_is_null", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_is_empty {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_is_empty").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2paddr_is_empty(P2PAddrHandle h)
     * }
     */
    public static FunctionDescriptor p2paddr_is_empty$descriptor() {
        return p2paddr_is_empty.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2paddr_is_empty(P2PAddrHandle h)
     * }
     */
    public static MethodHandle p2paddr_is_empty$handle() {
        return p2paddr_is_empty.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2paddr_is_empty(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_is_empty$address() {
        return p2paddr_is_empty.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2paddr_is_empty(P2PAddrHandle h)
     * }
     */
    public static int p2paddr_is_empty(MemorySegment h) {
        var mh$ = p2paddr_is_empty.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_is_empty", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_sizeof {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_SHORT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_sizeof").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned short p2paddr_sizeof(P2PAddrHandle h)
     * }
     */
    public static FunctionDescriptor p2paddr_sizeof$descriptor() {
        return p2paddr_sizeof.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned short p2paddr_sizeof(P2PAddrHandle h)
     * }
     */
    public static MethodHandle p2paddr_sizeof$handle() {
        return p2paddr_sizeof.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned short p2paddr_sizeof(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_sizeof$address() {
        return p2paddr_sizeof.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned short p2paddr_sizeof(P2PAddrHandle h)
     * }
     */
    public static short p2paddr_sizeof(MemorySegment h) {
        var mh$ = p2paddr_sizeof.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_sizeof", h);
            }
            return (short)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_is_child {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_is_child").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2paddr_is_child(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static FunctionDescriptor p2paddr_is_child$descriptor() {
        return p2paddr_is_child.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2paddr_is_child(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static MethodHandle p2paddr_is_child$handle() {
        return p2paddr_is_child.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2paddr_is_child(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2paddr_is_child$address() {
        return p2paddr_is_child.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2paddr_is_child(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static int p2paddr_is_child(MemorySegment h, MemorySegment strAddr) {
        var mh$ = p2paddr_is_child.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_is_child", h, strAddr);
            }
            return (int)mh$.invokeExact(h, strAddr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_is_rable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_is_rable").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2paddr_is_rable(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static FunctionDescriptor p2paddr_is_rable$descriptor() {
        return p2paddr_is_rable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2paddr_is_rable(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static MethodHandle p2paddr_is_rable$handle() {
        return p2paddr_is_rable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2paddr_is_rable(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2paddr_is_rable$address() {
        return p2paddr_is_rable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2paddr_is_rable(P2PAddrHandle h, const wchar_t *strAddr)
     * }
     */
    public static int p2paddr_is_rable(MemorySegment h, MemorySegment strAddr) {
        var mh$ = p2paddr_is_rable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_is_rable", h, strAddr);
            }
            return (int)mh$.invokeExact(h, strAddr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create()
     * }
     */
    public static FunctionDescriptor p2peermsg_create$descriptor() {
        return p2peermsg_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create()
     * }
     */
    public static MethodHandle p2peermsg_create$handle() {
        return p2peermsg_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create()
     * }
     */
    public static MemorySegment p2peermsg_create$address() {
        return p2peermsg_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create()
     * }
     */
    public static MemorySegment p2peermsg_create() {
        var mh$ = p2peermsg_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_create");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_create_full {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_SHORT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_create_full").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_full(const wchar_t *src, const wchar_t *dst, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static FunctionDescriptor p2peermsg_create_full$descriptor() {
        return p2peermsg_create_full.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_full(const wchar_t *src, const wchar_t *dst, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MethodHandle p2peermsg_create_full$handle() {
        return p2peermsg_create_full.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_full(const wchar_t *src, const wchar_t *dst, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MemorySegment p2peermsg_create_full$address() {
        return p2peermsg_create_full.ADDR;
    }
